--- a/admin/update-product.html
+++ b/admin/update-product.html
@@ -8,6 +8,25 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class="product-listing">
+        <div class="product-item">
+          <img class="product-image" src="image_file.jpg" alt="product image">
+          <div class="product-details">
+            <div class="product-title">Product Title</div>
+            <div class="product-description">Product Description</div>
+            <div class="product-price">$0.00</div>
+            <div class="product-stock">In Stock</div>
+            <div>
+                <label for="category">Category:</label>
+                <select id="category" name="category">
+                  <option value="category1">Category 1</option>
+                  <option value="category2">Category 2</option>
+                  <option value="category3">Category 3</option>
+                </select>
+              </div> 
+              <button type="submit" id="sub-1">Buy</button>
+        </div>
+      </div>
     <script src="js/update-product.js"></script>
 </body>
 </html>
