--- a/products.html
+++ b/products.html
@@ -8,6 +8,45 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <script src="js/products.js"></script>
+
+
+  <div id="container">
+    <a href="">Home</a>
+    <a href="">About us</a>
+    <a href="">Collections</a>
+    <a href="">Contact us</a>
+    <label for="search"> Search <input class="Search" type="search" name="" id="">
+    </label>
+</div>
+
+
+<div id="container2">
+<img class="ban" src="" alt="">
+    <div class="banner-text">
+    <h1> Create your own style at your local store</h1>
+    <h2>Participate in making a new fashion</h2> 
+</div>
+</div>
+<br>
+<br>
+<br>  
+<div id="boxes">
+    <div class="box1"> <img src="" height="200" width="200" alt=""><button>Add to cart</button></div>
+    <div class="box2"> <img src="" height="200" width="200" alt=""> <button>Add to cart</button> </div>
+    <div class="box3"><img src="" width="200" height="200" alt="" ><button>Add to cart</button></div>
+    <div class="box4"><img src="" width="200" height="200" alt=""><button>Add to cart</button></div>
+    <div class="box5"><img src="" width="200" height="200" alt=""><button>Add to cart</button></div>
+    <div class="box6"><img src="" width="200" height="200" alt=""><button>Add to cart</button></div>
+</div> 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<footer>Clothing Est 2022</footer>
+
+<script src="/admin/js/create-product.js"></script>
 </body>
 </html>
