--- a/admin/create-product.html
+++ b/admin/create-product.html
@@ -8,6 +8,39 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <form id="for-1" onsubmit="return false">
+        <div>
+          <label for="title">Title:</label>
+          <input type="text" id="title" name="title">
+        </div>
+        <div>
+          <label for="description">Description:</label>
+          <textarea id="description" name="description"></textarea>
+        </div>
+        <div>
+          <label for="price">Price:</label>
+          <input type="number" id="price" name="price">
+        </div>
+        <div>
+          <label for="stock">Stock:</label>
+          <input type="number" id="stock" name="stock">
+        </div>
+        <!-- <div>
+          <label for="image">Image:</label>
+          <input type="file" id="image" name="image">
+        </div>
+        <div>
+          <label for="category">Category:</label>
+          <select id="category" name="category">
+            <option value="category1">Category 1</option>
+            <option value="category2">Category 2</option>
+            <option value="category3">Category 3</option>
+          </select>
+        </div> -->
+        <button type="submit" id="sub-1">Submit</button>
+      </form>
+      
+
     <script src="js/create-product.js"></script>
     
 </body>
