delete function klar!

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <!-- <link rel="stylesheet" href="css/style.css">-->
-  </head>
-  <body>
-    <table class="table"></table>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <table id="table" class="table">
+    <!-- <thead>
+      <tr>
+        <th>Kolumn 1</th>
+        <th>Kolumn 2</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Rad 1, Kolumn 1</td>
+        <td>Rad 1, Kolumn 2</td>
+      </tr>
+      <tr>
+        <td>Rad 2, Kolumn 1</td>
+        <td>Rad 2, Kolumn 2</td>
+      </tr>
+    </tbody> -->
+  </table>
+  
 
-    <script src="js/functions.js"></script>
-  </body>
+  <script src="js/functions.js"></script>
+</body>
+
 </html>
