--- a/admin/admin.html
+++ b/admin/admin.html
@@ -8,6 +8,22 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <p id="create-product-link">
+    Create
+    <a href="create-product.html">
+      New product 
+    </a>
+    here
+  </p>
+  
+  <p id="home-product-link">
+    Click 
+    <a href="../products.html">
+      Here
+    </a>
+    To Homepage
+  </p>
+  
   <table id="table" class="table">
     <!-- <thead>
       <tr>
