--- a/products.html
+++ b/products.html
@@ -8,45 +8,60 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <p class="admin-link">
+        Link to admin
+        <a href="admin/admin.html">
+          click the link
+        </a>
+        here
+      </p>
+      
 
 
-  <div id="container">
-    <a href="">Home</a>
-    <a href="">About us</a>
-    <a href="">Collections</a>
-    <a href="">Contact us</a>
-    <label for="search"> Search <input class="Search" type="search" name="" id="">
-    </label>
-</div>
+
+    <ul id = "product1" class ="tilesWrap">
+        <li class="theproduct">
+             <h2 class ="price"></h2>
+             <h3 class ="name"></h3>
+             <p class =description >
+                <div>
+                    <label for="category">Category:</label>
+                    <select id="category" name="category">
+                    <input type="text" id="cato-2">
+                    </select>
+                  </div> 
+   
+             </p>
+             <!-- <button>Manage Products</button> -->
+         </li>
+        <!-- <li class="theproduct">
+             <h2 class ="price"></h2>
+             <h3 class ="name"></h3>
+             <p class =description>
+   
+             </p>
+             <button id ="btn">Manage Products</button>
+         </li> -->
+        <!-- <li class="theproduct">
+             <h2 class ="price"></h2>
+             <h3 class ="name"></h3>
+             <p class =description>
+   
+             </p>
+             <button id ="btn">Manage Products</button>
+         </li> -->
+       </ul>
 
 
-<div id="container2">
-<img class="ban" src="" alt="">
-    <div class="banner-text">
-    <h1> Create your own style at your local store</h1>
-    <h2>Participate in making a new fashion</h2> 
-</div>
-</div>
-<br>
-<br>
-<br>  
-<div id="boxes">
-    <div class="box1"> <img src="" height="200" width="200" alt=""><button>Add to cart</button></div>
-    <div class="box2"> <img src="" height="200" width="200" alt=""> <button>Add to cart</button> </div>
-    <div class="box3"><img src="" width="200" height="200" alt="" ><button>Add to cart</button></div>
-    <div class="box4"><img src="" width="200" height="200" alt=""><button>Add to cart</button></div>
-    <div class="box5"><img src="" width="200" height="200" alt=""><button>Add to cart</button></div>
-    <div class="box6"><img src="" width="200" height="200" alt=""><button>Add to cart</button></div>
-</div> 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 
-<footer>Clothing Est 2022</footer>
 
-<script src="/admin/js/create-product.js"></script>
+
+
+   
+
+
+
+  
+<script src="js/product.js"></script>
 </body>
 </html>
