--- a/admin/update-product.html
+++ b/admin/update-product.html
@@ -8,25 +8,29 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="product-listing">
-        <div class="product-item">
-          <img class="product-image" src="image_file.jpg" alt="product image">
-          <div class="product-details">
-            <div class="product-title">Product Title</div>
-            <div class="product-description">Product Description</div>
-            <div class="product-price">$0.00</div>
-            <div class="product-stock">In Stock</div>
-            <div>
-                <label for="category">Category:</label>
-                <select id="category" name="category">
-                  <option value="category1">Category 1</option>
-                  <option value="category2">Category 2</option>
-                  <option value="category3">Category 3</option>
-                </select>
-              </div> 
-              <button type="submit" id="sub-1">Buy</button>
+    <form id="for-2" onsubmit="return false">
+        <div>
+          <label for="title">Title:</label>
+          <input type="text" id="title2" name="title">
         </div>
-      </div>
+        <div>
+          <label for="description">Description:</label>
+          <textarea id="description2" name="description"></textarea>
+        </div>
+        <div>
+          <label for="price">Price:</label>
+          <input type="number" id="price2" name="price">
+        </div>
+        <div>
+          <label for="stock">Stock:</label>
+          <input type="number" id="stock2" name="stock">
+        </div>
+        <div>
+          <label for="category">Category:</label>
+          <input type="text"  id="cate-1">
+        </div>
+        <button type="submit" id="sub-2">Submit</button>
+      </form>
     <script src="js/update-product.js"></script>
 </body>
 </html>
