--- a/admin/create-product.html
+++ b/admin/create-product.html
@@ -25,18 +25,9 @@
           <label for="stock">Stock:</label>
           <input type="number" id="stock" name="stock">
         </div>
-        <!-- <div>
-          <label for="image">Image:</label>
-          <input type="file" id="image" name="image">
-        </div>
-        <div>
           <label for="category">Category:</label>
-          <select id="category" name="category">
-            <option value="category1">Category 1</option>
-            <option value="category2">Category 2</option>
-            <option value="category3">Category 3</option>
-          </select>
-        </div> -->
+          <input type="text" id="category">
+        </div>
         <button type="submit" id="sub-1">Submit</button>
       </form>
       
